src/test/ui/traits/trait-bounds-on-structs-and-enums-xc.stderr
error[E0277]: the trait bound `usize: trait_bounds_on_structs_and_enums_xc::Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums-xc.rs:7:1
   |
LL | fn explode(x: Foo<usize>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `trait_bounds_on_structs_and_enums_xc::Trait` is not implemented for `usize`
   |
   = note: required by `trait_bounds_on_structs_and_enums_xc::Foo`

error[E0277]: the trait bound `f32: trait_bounds_on_structs_and_enums_xc::Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums-xc.rs:10:1
   |
LL | fn kaboom(y: Bar<f32>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `trait_bounds_on_structs_and_enums_xc::Trait` is not implemented for `f32`
   |
   = note: required by `trait_bounds_on_structs_and_enums_xc::Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
